--- a/source/sass/blocks/category-list.scss
+++ b/source/sass/blocks/category-list.scss
@@ -192,9 +192,14 @@
       stroke: var(--color-stroke, $blue-default);
     }
 
+    .category-list__count-wrap {
+      box-shadow: 0 0 10px 17px var(--color-tag, $light-blue);
+    }
+
     .category-list__count-wrap .category-list__count {
       background-color: var(--color-bg-main, $white);
       color: var(--color-interactive-default, $blue-default);
+
     }
 
     @media (hover: hover) {
@@ -376,7 +381,7 @@
 .category-list__count-wrap {
   position: absolute;
   top: 50%;
-  right: 35px;
+  right: 20px;
 
   display: flex;
   align-items: center;
@@ -385,6 +390,8 @@
   opacity: 1;
   transition: opacity $style-change-duration;
   box-shadow: 0 0 10px 17px var(--color-bg-secondary, $color-bg);
+
+  border-radius: 50%;
 
   transform: translateY(-50%);
 
@@ -542,9 +549,9 @@
     font-size: 15px;
   }
 
-  .category-list__count-wrap {
-    position: static;
-  }
+  // .category-list__count-wrap {
+  //   position: static;
+  // }
 
   .category-list__count--zero {
     background-color: var(--color-bg-main, $white);
