--- a/source/sass/blocks/curator.scss
+++ b/source/sass/blocks/curator.scss
@@ -19,13 +19,13 @@
     border-radius: 5px;
 
     @media (min-width: 720px) {
-      padding: 20px 24px 6px;
+      padding: 20px 24px 24px;
     }
 
     @media (min-width: $tablet-max-width) {
+      padding: 20px 24px;
       display: flex;
       flex-flow: row nowrap;
-      padding-bottom: 3px;
     }
   }
 
@@ -35,6 +35,7 @@
     margin-bottom: 24px;
 
     @media (min-width: 720px) {
+      align-items: center;
       margin-bottom: 33px;
     }
 
@@ -80,7 +81,8 @@
     flex-flow: column;
 
     @media (min-width: $tablet-max-width) {
-      padding-bottom: 8px;
+      // padding-top: 8px;
+      // // padding-bottom: 8px;
     }
   }
 
@@ -113,43 +115,34 @@
     margin: 0 0 28px;
     padding: 0;
     list-style: none;
+    flex-grow: 1;
 
     @media (min-width: 420px) {
-      display: flex;
-      flex-flow: row wrap;
-      align-items: center;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-row-gap: 18px;
     }
 
     @media (min-width: 720px) {
-      flex-grow: 1;
+      grid-template-columns: 1fr 1fr 1.05fr;
       margin-bottom: 0;
+    }
+
+    @media (min-width: $tablet-max-width) {
+      grid-template-columns: 1.39fr 1.39fr 1fr;
     }
 
     li {
       margin-bottom: 18px;
-      width: 100%;
       display: flex;
       flex-flow: column nowrap;
 
       &:first-child {
-        margin-right: auto;
-      }
-      &:last-child {
-        margin-bottom: 0;
+        grid-column-start: span 2;
       }
 
       @media (min-width: 420px) {
-        padding-right: 24px;
-        width: calc(100% / 2);
-        min-width: max-content;
-
-        &:last-child {
-          margin-bottom: 18px;
-        }
-      }
-
-      @media (min-width: 590px) {
-        width: calc(100% / 3);
+        margin-bottom: 0;
       }
     }
 
