--- a/source/sass/blocks/curator.scss
+++ b/source/sass/blocks/curator.scss
@@ -46,7 +46,22 @@
     }
   }
 
+  .curator__placeholder {
+    width: 100%;
+    height: 100%;
+
+    font-size: rem(32px);
+    text-transform: uppercase;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: $color-bg;
+  }
+
   .curator__avatar {
+    position: relative;
     width: 48px;
     height: 48px;
     flex-shrink: 0;
@@ -67,6 +82,11 @@
     overflow: hidden;
 
     img {
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+
       width: 100%;
       height: 100%;
 
@@ -79,11 +99,6 @@
     align-self: center;
     display: flex;
     flex-flow: column;
-
-    @media (min-width: $tablet-max-width) {
-      // padding-top: 8px;
-      // // padding-bottom: 8px;
-    }
   }
 
   .curator__name {
