--- a/source/sass/blocks/curator.scss
+++ b/source/sass/blocks/curator.scss
@@ -131,6 +131,11 @@
     padding: 0;
     list-style: none;
     flex-grow: 1;
+    height: var(--height);
+
+    overflow: hidden;
+
+    transition: height $style-change-duration;
 
     @media (min-width: 420px) {
       display: grid;
@@ -141,6 +146,7 @@
     @media (min-width: 720px) {
       grid-template-columns: 1fr 1fr 1.05fr;
       margin-bottom: 0;
+      height: auto;
     }
 
     @media (min-width: $tablet-max-width) {
@@ -154,6 +160,10 @@
 
       &:first-child {
         grid-column-start: span 2;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
       }
 
       @media (min-width: 420px) {
@@ -186,6 +196,23 @@
   .curator__button {
     @media (min-width: 720px) {
       display: none;
+    }
+
+    svg {
+      transition: transform $style-change-duration;
+    }
+  }
+
+  .collapsed {
+    svg {
+      transform: rotate(-180deg);
+    }
+  }
+
+  ul[data-collapsed = 'true'] {
+    @media (max-width: 719px) {
+      margin: 0;
+      height: 0;
     }
   }
 }
