--- a/source/sass/blocks/curator.scss
+++ b/source/sass/blocks/curator.scss
@@ -48,6 +48,7 @@
 
     @media (min-width: $tablet-max-width) {
       width: 44%;
+      padding-right: 20px;
       flex: 0 0 auto;
       margin-bottom: 0;
     }
@@ -115,6 +116,10 @@
       line-height: rem(23px);
       margin-bottom: 4px;
     }
+
+    @media (min-width: $tablet-max-width) {
+      padding-top: 9px;
+    }
   }
 
   .curator__position {
@@ -122,6 +127,7 @@
     font-size: rem(13px);
     font-weight: 400;
     line-height: rem(17px);
+    max-width: 60ch;
 
     @media (min-width: $tablet-max-width) {
       max-width: 34ch;
@@ -134,6 +140,7 @@
     list-style: none;
     flex-grow: 1;
     height: var(--height);
+    align-self: center;
 
     overflow: hidden;
 
@@ -149,20 +156,24 @@
       grid-template-columns: 1fr 1fr 1.05fr;
       margin-bottom: 0;
       height: auto;
+      max-width: 700px;
     }
 
     @media (min-width: $tablet-max-width) {
       grid-template-columns: 1.39fr 1.39fr 1fr;
+      max-width: initial;
+    }
+
+    .double {
+      grid-column-start: span 2;
     }
 
     li {
       margin-bottom: 18px;
+      padding-right: 20px;
       display: flex;
+      align-items: flex-start;
       flex-flow: column nowrap;
-
-      &:first-child {
-        grid-column-start: span 2;
-      }
 
       &:last-child {
         margin-bottom: 0;
@@ -192,6 +203,11 @@
       letter-spacing: 0;
       color: var(--color-text, $dark);
       text-decoration: none;
+      transition: color $style-change-duration;
+
+      &:hover:not(.focus-visible) {
+        color: var(--color-interactive-accent, $blue-accent);
+      }
     }
   }
 
