--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -96,6 +96,7 @@
 @import 'blocks/popover';
 @import 'blocks/category-list';
 @import 'blocks/curator';
+@import 'blocks/project-rules';
 
 // main page
 @import "blocks/news-notice";
