--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -35,6 +35,7 @@
         "b b"
         "c c"
         "curator curator"
+        "rules rules"
         "d e";
 
       >* {
@@ -163,14 +164,6 @@
   }
 }
 
-.proposal__rules {
-  margin-bottom: 48px;
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 56px;
-  }
-}
-
 .proposal__form-title {
   margin-bottom: 32px;
 
@@ -295,5 +288,12 @@
 
   h2 {
     margin: 0 0 25px;
+  }
+}
+
+.proposal .project-rules {
+  grid-area: rules;
+  &:not(:last-child) {
+    margin-bottom: 40px;
   }
 }
