добавляет ховер для ссылки

--- a/source/sass/blocks/project-rules.scss
+++ b/source/sass/blocks/project-rules.scss
@@ -19,6 +19,11 @@
   a {
     color: var(--color-interactive-default, $blue-default);
     text-underline-offset: 2px;
+    transition: color $style-change-duration;
+
+    &:hover:not(.focus-visible) {
+      color: var(--color-interactive-accent, $blue-accent);
+    }
   }
 
   svg {
