--- a/source/sass/blocks/buttons-wrapper.scss
+++ b/source/sass/blocks/buttons-wrapper.scss
@@ -8,6 +8,17 @@
   padding: 16px 16px;
 }
 
+.button-remove {
+  margin-left: auto;
+  margin-right: 22px;
+}
+
+@media (max-width: 780px) {
+  .button-remove {
+    margin-right: auto;
+  }
+}
+
 @include mobile {
   .buttons-wrapper {
     flex-direction: column;
@@ -17,5 +28,15 @@
     order: -1;
     margin-bottom: 15px;
     width: 100%;
+  }
+
+  .button--white {
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
+  }
+
+  .button-remove {
+    margin: 0;
   }
 }
