--- a/source/sass/blocks/new-project.scss
+++ b/source/sass/blocks/new-project.scss
@@ -163,6 +163,25 @@
 
   @media (max-width: $tablet-width - 1) {
     flex-direction: column;
+
+    .button--white {
+      &:not(:last-child) {
+        margin-bottom: 15px;
+      }
+    }
+  }
+
+  .button-remove {
+    margin-left: auto;
+    margin-right: 22px;
+
+    @media (max-width: 780px) {
+      margin-right: auto;
+    }
+
+    @media (max-width: $tablet-width - 1) {
+      margin: 0;
+    }
   }
 }
 
@@ -179,6 +198,10 @@
 
 .new-project .project-rules {
   &:not(:last-child) {
-    margin-bottom: 11px;
+    margin-bottom: 40px;
   }
+}
+
+.project-rules + .new-project__form {
+  padding-top: 0;
 }
