--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/counter";
 @import "blocks/paginator";
 @import "blocks/button-star";
+@import "blocks/button-remove";
 @import "blocks/page-404";
 @import "blocks/page-footer";
 @import "blocks/page-title";
