--- a/source/sass/blocks/area-improvement.scss
+++ b/source/sass/blocks/area-improvement.scss
@@ -122,3 +122,16 @@
 .area-improvement__paginator {
   margin-top: 0;
 }
+
+.area-improvement .activity-tabs {
+  padding: 0;
+  margin-bottom: 40px;
+
+  .activity-tabs__list {
+    padding: 0;
+  }
+}
+
+.activity-tabs + .area-improvement__proposal > .proposal-list__item {
+  padding-top: 0;
+}
