--- a/source/sass/blocks/project-rules.scss
+++ b/source/sass/blocks/project-rules.scss
@@ -1,15 +1,22 @@
 .project-rules {
   position: relative;
-  padding: 20px 24px 20px 44px;
+  padding: 15px 15px 15px 35px;
   border: 1px solid var(--color-stroke, $light-grey);
   border-radius: $border-radius;
 
   @include font;
   font-weight: 400;
-  font-size: 15px;
-  line-height: 135%;
+  font-size: 13px;
+  line-height: 17px;
 
   color: var(--color-text, $dark-text);
+
+  @media (min-width: $tablet-width) {
+    padding: 19px 24px 19px 44px;
+
+    font-size: 15px;
+    line-height: 135%;
+  }
 
   em {
     font-weight: 500;
@@ -28,7 +35,12 @@
 
   svg {
     position: absolute;
-    top: 22px;
-    left: 20px;
+    top: 17px;
+    left: 11px;
+
+    @media (min-width: $tablet-width) {
+      top: 22px;
+      left: 20px;
+    }
   }
 }
