--- a/source/sass/blocks/proposal.scss
+++ b/source/sass/blocks/proposal.scss
@@ -167,8 +167,8 @@
 .proposal__form-title {
   margin-bottom: 32px;
 
-  @media (min-width: $desktop-width) {
-    margin-bottom: 24px;
+  @media (min-width: $tablet-width) {
+    margin-bottom: 40px;
   }
 }
 
