--- a/source/sass/blocks/buttons-wrapper.scss
+++ b/source/sass/blocks/buttons-wrapper.scss
@@ -13,9 +13,15 @@
   margin-right: 22px;
 }
 
-@media (max-width: 780px) {
+// @media (max-width: 780px) {
+//   .button-remove {
+//     margin-right: auto;
+//   }
+// }
+
+@include tablet {
   .button-remove {
-    margin-right: auto;
+    margin-right: 6px;
   }
 }
 
@@ -31,6 +37,7 @@
   }
 
   .button--white {
+    order: 3;
     &:not(:last-child) {
       margin-bottom: 15px;
     }
@@ -38,5 +45,8 @@
 
   .button-remove {
     margin: 0;
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
   }
 }
