--- a/source/sass/blocks/rating-main.scss
+++ b/source/sass/blocks/rating-main.scss
@@ -306,6 +306,10 @@
     padding: 0;
   }
 
+  .activity-tabs__bottom {
+    width: 100%;
+  }
+
   + .rating-main__categories {
     border-top: none;
     padding-top: 0;
