добавляет фильтр и стили для десктопа

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -25,6 +25,9 @@
 @import "blocks/form-checkbox";
 @import "blocks/form-radio";
 @import "blocks/form-select";
+@import "blocks/single-select";
+@import "blocks/multiple-select";
+@import "blocks/categories-filter";
 @import "blocks/form-range";
 @import "blocks/form";
 @import "blocks/filter";
