--- a/source/sass/blocks/public-debate.scss
+++ b/source/sass/blocks/public-debate.scss
@@ -279,84 +279,8 @@
     }
   }
 
-  .public-debate__select {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-
-    border: 1px solid var(--color-stroke, $light-grey);
-    border-radius: 5px;
-
-    @media (max-width: $tablet-width - 1) {
-      margin-bottom: 16px;
-      flex-flow: column wrap;
-      align-items: flex-start;
-    }
-
-    @media (min-width: $tablet-width) {
-      margin-bottom: 16px;
-    }
-
-    .ss-single-selected {
-      padding: 15px 16px 15px 23px;
-
-      @media (max-width: $tablet-width - 1) {
-        padding: 15px 16px;
-        justify-content: center;
-      }
-
-      .placeholder {
-        .ss-disabled {
-          font-size: rem(15px);
-          line-height: 135%;
-        }
-      }
-    }
-
-    .placeholder {
-      flex: 0 0 auto;
-      width: auto;
-
-      font-size: rem(15px);
-      line-height: 135%;
-
-      @media (max-width: $tablet-width - 1) {
-        flex-shrink: 1;
-      }
-    }
-
-    .ss-content {
-      top: 41px;
-      left: 0;
-      width: 219px;
-
-      background-color: #ffffff;
-    }
-
-    .ss-main .ss-single-selected .ss-arrow {
-      margin-left: 12px;
-    }
-
-    .ss-main .ss-single-selected .ss-arrow span {
-      width: 8px;
-      height: 8px;
-    }
-
-    .form-select__checkbox-wrapper {
-      padding: 23px;
-      margin: 0 0 0 auto;
-      font-size: rem(15px);
-      line-height: 135%;
-
-      label {
-        position: relative;
-      }
-
-      @media (max-width: $tablet-width - 1) {
-        padding: 15px 16px;
-        margin-left: 0;
-      }
-    }
+  .public-debate__filter {
+    margin-bottom: 16px;
   }
 
   .public-debate__list {
