--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,7 +27,6 @@
 @import "blocks/form-select";
 @import "blocks/single-select";
 @import "blocks/multiple-select";
-@import "blocks/categories-filter";
 @import "blocks/form-range";
 @import "blocks/form";
 @import "blocks/filter";
@@ -40,6 +39,8 @@
 @import "blocks/page-footer";
 @import "blocks/page-title";
 @import "blocks/page-nav";
+@import "blocks/categories-filter";
+@import "blocks/voices-counter";
 @import "blocks/page-top";
 @import "blocks/archive-link";
 @import "blocks/article-link";
