пп на десктопе для фильтра

--- a/source/sass/blocks/multiple-select.scss
+++ b/source/sass/blocks/multiple-select.scss
@@ -168,7 +168,7 @@
           position: absolute;
           top: calc(50% - 1px);
           left: 0;
-          width: 100%;
+          width: 14px;
           height: 2px;
 
           background-color: var(--color-interactive-default, $red);
