--- a/source/sass/blocks/categories-filter.scss
+++ b/source/sass/blocks/categories-filter.scss
@@ -1,51 +1,54 @@
 .categories-filter {
+  width: 100%;
   padding: 18px 24px 18px 20px;
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
 
   border: 1px solid var(--color-stroke, $light-grey);
   border-radius: 5px;
+
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: flex-start;
 
   @media (max-width: $tablet-width - 1) {
     flex-flow: column wrap;
     align-items: flex-start;
   }
 
-  &>.categories-filter__select:not(:last-child):not(:nth-last-child(2)) {
+  &>*:not(:last-child):not(:nth-last-child(2)) {
     border-right: 1px solid var(--color-stroke, $light-grey);
   }
 
-  &>.categories-filter__voices-counter:not(:last-child):not(:nth-last-child(2)) {
-    border-right: 1px solid var(--color-stroke, $light-grey);
+  .page-nav {
+    max-width: max-content;
+    padding-right: 6px;
+    margin-right: 29px;
   }
-
-  &>.categories-filter__level-toggler:not(:last-child):not(:nth-last-child(2)) {
-    border-right: 1px solid var(--color-stroke, $light-grey);
-
-    @include tablet {
-      border-right: none;
-    }
+  .multiple-select {
+    padding-right: 33px;
+    margin-right: 33px;
+  }
+  .single-select {
+    padding-right: 32px;
+    max-width: 200px;
+  }
+  .form-checkbox {
+    margin-left: auto;
   }
 }
 
 .categories-filter__level-toggler {
+  width: calc(100% + 26px);
   padding: 0;
-  margin: 0 29px 0 0;
-  width: auto;
+  margin: 0 -26px 0 0;
   background-color: transparent;
   border-radius: 0;
 
   li {
     margin: 0 26px 0 0;
-
-    &:last-child {
-      margin-right: 32px;
-    }
   }
 
   @include tablet {
-    width: 100%;
     padding-bottom: 20px;
     margin-bottom: 21px;
     border-bottom: 1px solid var(--color-stroke, $light-grey);
@@ -53,9 +56,7 @@
 }
 
 .categories-filter__select {
-  padding-right: 32px;
-  // padding-right: 25px; //фиксированная ширина
-  margin-right: 33px;
+  // padding-right: 35px;
 
   .ss-single-selected {
     padding: 0;
@@ -81,5 +82,4 @@
 
 .categories-filter__checkbox {
   margin-bottom: 0;
-  margin-left: auto;
 }
