--- a/source/sass/blocks/categories-filter.scss
+++ b/source/sass/blocks/categories-filter.scss
@@ -136,6 +136,10 @@
     margin-left: auto;
     margin-bottom: 0;
 
+    label {
+      color: var(--color-text, $grey);
+    }
+
     @include mobile {
       margin-left: 0;
     }
