--- a/source/sass/blocks/categories-filter.scss
+++ b/source/sass/blocks/categories-filter.scss
@@ -91,8 +91,8 @@
       margin: 0 0 20px 0;
 
       .ss-content {
-        width: calc(100% + var(--paddingLeft) + var(--paddingRight));
-        left: calc(var(--paddingLeft) * -1);
+        width: calc(100% + var(--paddingLeft) + var(--paddingRight) + 2px);
+        left: calc((var(--paddingLeft) + 1px) * -1);
         padding-left: 16px;
 
         .ss-option {
@@ -122,8 +122,8 @@
       width: 100%;
 
       .ss-content {
-        width: calc(100% + var(--paddingLeft) + var(--paddingRight));
-        left: calc(var(--paddingLeft) * -1);
+        width: calc(100% + var(--paddingLeft) + var(--paddingRight) + 2px);
+        left: calc((var(--paddingLeft) + 1px) * -1);
         padding-left: 0;
 
         .ss-option {
