--- a/source/sass/blocks/gallery-popup.scss
+++ b/source/sass/blocks/gallery-popup.scss
@@ -192,7 +192,7 @@
     background-color: var(--color-bg-main, $white);
   }
 
-  .gallery-popup:not(.gallery-popup--proposal) .popup__container {
+  .gallery-popup:not(.gallery-popup--proposal):not(.gallery-popup--single) .popup__container {
     display: block;
     padding: 60px $mobile-padding 92px;
   }
@@ -269,19 +269,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-
-    // border-radius: 5px;
   }
-
-  // .gallery-popup__frame .gallery__item-img {
-  //   width: 100%;
-  //   height: 100%;
-  //   object-fit: contain;
-
-  //   border-radius: 5px;
-  // }
-
-
 
   .gallery-popup__nav-btn {
     width: 142px;
@@ -365,6 +353,99 @@
 
     .gallery-popup__nav-btn {
       width: 50px;
+    }
+  }
+}
+
+.gallery-popup--single {
+  .popup__container {
+    @include mobile {
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .gallery-popup__content {
+    max-height: 544px;
+    position: relative;
+    display: flex;
+    flex-flow: row nowrap;
+
+    overflow: visible;
+
+    @include tablet {
+      padding: 72px 24px 24px;
+      flex-flow: column nowrap;
+    }
+
+    @include mobile {
+      padding: 52px 16px 16px;
+    }
+
+    .popup__bar--top {
+      position: absolute;
+      top: -8px;
+      right: -45px;
+
+      @include tablet {
+        top: 0;
+        right: 0;
+      }
+    }
+
+    .popup__close-btn {
+      @include mobile {
+        width: 52px;
+        height: 52px;
+      }
+    }
+
+    .popup__close-btn svg {
+      width: 18px;
+      height: 18px;
+
+      stroke: $white;
+
+      @include tablet {
+        stroke: var(--color-text, $grey-default);
+      }
+    }
+
+    .popup__close-btn:hover:not(.focus-visible) svg {
+      stroke: var(--color-interactive-default, #2c8ecc);
+    }
+
+
+    .gallery-popup__frame {
+      margin: 0;
+      padding: 24px;
+      width: 100%;
+      height: 100%;
+
+      @include tablet {
+        padding: 0;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .gallery-popup__photo-description {
+      padding: 56px 24px;
+      width: 24.5%;
+
+      &:empty {
+        display: none;
+      }
+    }
+
+    .popup__bar--bottom {
+      display: none;
     }
   }
 }
