--- a/source/sass/blocks/gallery-popup.scss
+++ b/source/sass/blocks/gallery-popup.scss
@@ -192,7 +192,7 @@
     background-color: var(--color-bg-main, $white);
   }
 
-  .gallery-popup:not(.gallery-popup--proposal):not(.gallery-popup--single) .popup__container {
+  .gallery-popup:not(.gallery-popup--proposal):not(.gallery-popup--single):not(.gallery-popup--description) .popup__container {
     display: block;
     padding: 60px $mobile-padding 92px;
   }
@@ -436,11 +436,87 @@
     }
 
     .gallery-popup__photo-description {
-      padding: 56px 24px;
-      width: 24.5%;
+      display: none;
+    }
 
-      &:empty {
-        display: none;
+    .popup__bar--bottom {
+      display: none;
+    }
+  }
+}
+
+.gallery-popup--description {
+  .popup__container {
+    @include mobile {
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .gallery-popup__content {
+    position: relative;
+    display: flex;
+    flex-flow: row nowrap;
+
+    @include tablet {
+      padding: 72px 24px 24px;
+      flex-flow: column nowrap;
+    }
+
+    @include mobile {
+      padding: 52px 16px 16px;
+    }
+
+    .popup__bar--top {
+      position: absolute;
+      top: 0;
+      right: 0;
+
+      @include tablet {
+        top: 0;
+        right: 0;
+      }
+    }
+
+    .popup__close-btn {
+      @include mobile {
+        width: 52px;
+        height: 52px;
+      }
+    }
+
+    .popup__close-btn svg {
+      width: 18px;
+      height: 18px;
+    }
+
+    .gallery-popup__frame {
+      margin: 0;
+      padding: 64px 24px;
+      width: 100%;
+      height: 100%;
+
+      @include tablet {
+        padding: 0;
+        margin-bottom: 16px;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .gallery-popup__photo-description {
+      padding: 56px 24px;
+      width: 33%;
+
+      @include tablet {
+        width: 100%;
+        padding: 0;
       }
     }
 
