исправляет цвет при ховере на карточке

--- a/source/sass/blocks/preview-input.scss
+++ b/source/sass/blocks/preview-input.scss
@@ -61,7 +61,7 @@
 
   &:hover {
     .preview-input__description {
-      color: var(--color-interactive-default, $blue-default);
+      color: var(--color-interactive-accent, $blue-accent);
     }
   }
 
