--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -106,6 +106,7 @@
 @import 'blocks/category-list';
 @import 'blocks/curator';
 @import 'blocks/project-rules';
+@import 'blocks/additional';
 
 // main page
 @import "blocks/news-notice";
