--- a/source/sass/blocks/multiple-select.scss
+++ b/source/sass/blocks/multiple-select.scss
@@ -2,15 +2,18 @@
   --colNum: 1;
   --colWidth: 264px;
   --columnGap: 48px;
-  --varmaxHeight: 324px;
+  --maxHeight: auto;
+
 
   width: auto;
   max-width: 100%;
 
   &.two-column {
+    --maxHeight: 324px;
     --colNum: 2;
 
     @include mobile {
+      --maxHeight: 400px;
       --colNum: 1;
     }
   }
@@ -19,19 +22,26 @@
     --colNum: 3;
 
     @include tablet {
+      --maxHeight: 324px;
       --colNum: 2;
     }
 
     @include mobile {
+      --maxHeight: 400px;
       --colNum: 1;
     }
+  }
+
+  &.fixed-height {
+    --maxHeight: 324px;
   }
 
   .ss-content {
     left: -21px;
     top: 31px;
+    z-index: 10;
     width: unset;
-    max-height: var(--varmaxHeight);
+    max-height: var(--maxHeight);
     padding: 16px 24px 24px;
     border: none;
     background-color: var(--color-bg-secondary, $color-bg);
